# robot

./: .gitignore  HTTP.md  README.md
cameraseg/: CMakeLists.txt  package.xml
cameraseg/launch/: cameraseg.launch.py
cameraseg/src/: segmentation.cpp
cartographer/: CMakeLists.txt
cartographer/cartographer/common/: configuration_file_resolver.cc  lua_parameter_dictionary.cc
cartographer/configuration_files/: map_builder.lua  pose_graph.lua  trajectory_builder_2d.lua  trajectory_builder_3d.lua
cartographer_ros/cartographer_ros/: CMakeLists.txt
cartographer_ros/cartographer_ros/configuration_files/: backpack_2d.lua  fd.lua  fd_localization.lua
cartographer_ros/cartographer_ros/launch/: demo_fd.launch.py  demo_fd_localization.launch.py  fd_occ.launch.py  fd_slam.launch.py
cartographer_ros/cartographer_ros/src/: node.cpp  node_constants.cpp  node_main.cpp  node_options.cpp  occupancy_grid_node_main.cpp  ros_log_sink.cpp  ros_map.cpp  sensor_bridge.cpp
cartographer_ros/cartographer_ros/urdf/: backpack_2d.urdf  fd_base.urdf
cartographer_ros/cartographer_ros_msgs/: CMakeLists.txt
cartographer_ros/cartographer_rviz/: CMakeLists.txt
chargdock/: readme.txt
chargdock/charger_return_service/: README.md  package.xml  setup.cfg  setup.py
chargdock/charger_return_service/charger_return_service/: charger_return_node.py
chargdock/charger_return_service/launch/: charger_return_complete.launch.py
chargdock/laser_charger_detector/: CMakeLists.txt  detec.rviz  package.xml
chargdock/laser_charger_detector/.cache/clangd/index/: groove_detector.cpp.D0C6EA8CBD17F05D.idx  groove_detector.hpp.7570AA4E87E50C3F.idx  laser_detector.cpp.3BBB0A2F1A47BBC5.idx  laser_detector.hpp.7C0F7621B2FBCF7C.idx  laser_detector2.cpp.7D8FCE2884921F88.idx
chargdock/laser_charger_detector/include/: bezier_curve.hpp  chassis_controller.hpp  groove_detector.hpp
chargdock/laser_charger_detector/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chargdock/laser_charger_detector/install/laser_charger_detector/include/: gr_detector2.hpp  gr_detector3.hpp  groove_detector.hpp
chargdock/laser_charger_detector/install/laser_charger_detector/lib/laser_charger_detector/: gr_detector2_node  gr_detector3_node  groove_detector
chargdock/laser_charger_detector/install/laser_charger_detector/share/ament_index/resource_index/package_run_dependencies/: laser_charger_detector
chargdock/laser_charger_detector/install/laser_charger_detector/share/ament_index/resource_index/parent_prefix_path/: laser_charger_detector
chargdock/laser_charger_detector/install/laser_charger_detector/share/laser_charger_detector/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
chargdock/laser_charger_detector/install/laser_charger_detector/share/laser_charger_detector/cmake/: laser_charger_detectorConfig.cmake
chargdock/laser_charger_detector/launch/: chassiss_controller.launch.py
chargdock/laser_charger_detector/src/: bezier_curve.cpp  chassis_controller.cpp  groove_detector.cpp
chargdock/service_position/: CMakeLists.txt  package.xml
chargdock/service_position/src/: service_position_debug.cpp  service_position_node.cpp
chargdock/service_position_msgs/: CMakeLists.txt  package.xml
chargdock/service_position_msgs/srv/: GetPosition.srv  SetPosition.srv
hardware/motor_drive/: CMakeLists.txt  package.xml
hardware/motor_drive/include/motor_drive/: crc.hpp  motor_drive.hpp  type.hpp
hardware/motor_drive/launch/: robot_motor_base.launch.py
hardware/motor_drive/src/: crc.cpp  main.cpp  motor_drive.cpp
hardware/serial_imu/: CMakeLists.txt  main_node.cpp  package.xml  view_node.cpp
hardware/serial_imu/include/serial_imu/: config_cmd.hpp  rcv_imu_data.hpp  usart_driver.hpp
hardware/serial_imu/launch/: serial_imu.launch.py  view_imu.launch.py
hardware/serial_imu/src/: comm_interface.cpp  config_cmd.cpp  imu_data_parse.cpp  usart_driver.cpp
hardware/serial_imu_interface/: CMakeLists.txt  package.xml
hardware/serial_imu_interface/msg/: RawImu.msg  RpyImu.msg
hardware/serial_imu_old/: CMakeLists.txt  package.xml
hardware/serial_imu_old/include/serial_imu_old/: ch_serial.hpp
hardware/serial_imu_old/launch/: serial_imu_old.launch.py
hardware/serial_imu_old/src/: ch_serial.cpp  main.cpp
hardware/teleop_twist_keyboard/: teleop_twist_keyboard.py
hardware/zfy_imu_node/: CMakeLists.txt  package.xml
hardware/zfy_imu_node/include/zfy_imu_node/: imu_handle.hpp
hardware/zfy_imu_node/launch/: zyf176.launch.py
hardware/zfy_imu_node/src/: imu_handle.cpp  main.cpp
httpface/: CMakeLists.txt  package.xml
httpface/include/httpface/: httplib.h  httpserver.hpp
httpface/src/: httpserver.cpp  main.cpp
lakibeam1_ros2/src/: lakibeam1_scan.cpp
nav2_bringup/: CMakeLists.txt  package.xml  test_map.pgm
nav2_bringup/launch/: fd_bringup.launch.py  fd_localization.launch.py  fd_map_server.launch.py  fd_mask.launch.py  fd_navigation.launch.py  fd_robot.launch.py  rviz_launch.py
nav2_bringup/maps/: map.pgm  map.yaml  map1.pgm  map1.yaml  noimu.pbstream  noimu.yaml  noimu_mask.yaml  test_map.pbstream  test_map.yaml  test_mask.yaml
nav2_bringup/params/: fd_params.yaml
nav2_bringup/rviz/: nav2_default_view.rviz  nav2_namespaced_view.rviz
nav2_bringup/urdf/: fd_base.xacro
navigation2/nav2_behavior_tree/: CMakeLists.txt  nav2_tree_nodes.xml
navigation2/nav2_behaviors/: CMakeLists.txt  behavior_plugin.xml
navigation2/nav2_costmap_2d/: CMakeLists.txt  costmap_plugins.xml
scan_filter/: CMakeLists.txt  package.xml
scan_filter/src/: main.cpp
serial/: CMakeLists.txt
serial_imu/: view_node.cpp
serial_imu/src/: imu_data_parse.cpp  rcv_imu_data.cpp
web_control/: package.xml  setup.py
web_control/launch/: common.launch.py  demo_test.launch.py  demo_test_localization.launch.py  last_pose.json  set_initpose.launch.py
web_control/web_control/: initpose.py  mapmanager.py  run.py
web_control_msgs/: CMakeLists.txt  package.xml
web_control_msgs/action/: MapSave.action
web_control_msgs/srv/: RunControl.srv
(+71 files in other folders)
