<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charger_return_service</name>
  <version>0.0.0</version>
  <description>Charger return service package for autonomous robot charging station docking</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>service_position_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
